--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
 	<!-- ________________________ PUBLIC TARGETS ________________________ -->
 	
 
-	<target name="run-local-sensor" depends="build">
+	<target name="run-local-sensor" depends="">
 		<java fork="true" failonerror="true" classname="se.koc.hal.plugin.localsensor.ImpulseTracker">
 			<classpath>
 				<pathelement path="${buildDir}/hal.jar"/>	<!--wildcard may not be platform independent, ok?-->
@@ -34,7 +34,7 @@
 		</java>
 	</target>
 	
-	<target name="run-remote-sensor" depends="build">
+	<target name="run-remote-sensor" depends="">
 		<java fork="true" failonerror="true" classname="se.koc.hal.plugin.tellstick.TelstickSerialCommTest">
 			<classpath>
 				<pathelement path="${buildDir}/hal.jar"/>	<!--wildcard may not be platform independent, ok?-->
@@ -43,7 +43,7 @@
 		</java>
 	</target>
 	
-	<target name="run-main-server" depends="build">
+	<target name="run-main-server" depends="">
 		<java fork="true" failonerror="true" classname="se.koc.hal.PowerChallenge">
 			<classpath>
 				<pathelement path="${buildDir}/hal.jar"/>	<!--wildcard may not be platform independent, ok?-->
@@ -64,10 +64,12 @@
 		<mkdir dir="${buildDir}" />
 		<javac srcdir="${srcDir}" destdir="${buildDir}" fork="yes">
 			<include name="**/*.java" />
+			<exclude name="se/koc/hal/tts/GoogleTTSClient.java" />
 			<classpath refid="classpath.build" />
 		</javac>
 		<javac srcdir="${testDir}" destdir="${buildDir}" fork="yes">
 			<include name="**/*.java" />
+			<exclude name="se/koc/hal/test/JarvisSyntersizerTest.java" />
 			<classpath refid="classpath.build" />
 		</javac>
 		<jar destfile="${buildDir}/hal.jar" basedir="${buildDir}" excludes="hal.jar" />
