Optimized data aggregation. - All aggregation use only the raw data as input. - Only produce aggregated data that will show in a chart (less work after clearing the sensor_data_aggr table). - Adding version handling of data aggregation to secure that the peer has up to date data. - New db version: 6 - Adding sensor.aggr_version(int, default=1), will clear sensor_data_aggr for local sensors
Former-commit-id: cbf5a890a5058791b443e975048db13f6ac4c9fe

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="external/marytts-5.1.2/lib/icu4j-54.1.1.jar"/>
 	<classpathentry kind="lib" path="external/marytts-5.1.2/lib/marytts-client-5.1.2-jar-with-dependencies.jar"/>
@@ -46,5 +46,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/zutil-java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="output" path="lib/java-speech-api-master/bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
