Changed Zutil download url to jenkins

--- a/build.xml
+++ b/build.xml
@@ -95,7 +95,7 @@
 
 	<target name="build-dependencies">
 		<mkdir dir="${buildDir}" />
-		<get src="http://repo.koc.se/zutil-java.git/blob/master/Zutil.jar" dest="${libDir}" verbose="true" usetimestamp="true"/>
+		<get src="http://ci.koc.se/jenkins/job/Zutil/lastSuccessfulBuild/artifact/build/release/Zutil.jar" dest="${libDir}" verbose="true" usetimestamp="true"/>
 	</target>
 
 	<target name="build-test" depends="build">
