--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 	<target name="run" depends="release">
 		<java fork="true" failonerror="true" classname="se.hal.HalServer">
 			<classpath>
-				<pathelement path="${buildDir}/hal.jar"/>	<!--wildcard may not be platform independent, ok?-->
+				<pathelement path="${releaseDir}/hal.jar"/>	<!--wildcard may not be platform independent, ok?-->
 				<pathelement path="${libDir}/*"/>	<!--wildcard may not be platform independent, ok?-->
 			</classpath>
 		</java>
