Charts will autohide the popup and fixed logging property

--- a/logging.properties
+++ b/logging.properties
@@ -12,4 +12,4 @@ se.hal.level = ALL
 
 zutil.level = ALL
 zutil.db.bean.level = INFO
-zutil.net.http.pages.level = INFO
+zutil.net.http.page.level = INFO
