Reformatted example configuration file

--- a/hal.conf.example
+++ b/hal.conf.example
@@ -1,9 +1,17 @@
+### Core settings
 http_port=8080
 sync_port=6666
 
-# Plugin configurations
+### Plugin configurations
+## Tellstick plugin
 #tellstick.com_port=COM5
+#tellstick.com_port=/dev/serial/by-id/usb-Telldus_TellStick_Duo_A6XNNE6Z-if00-port0
+
+## NetUPS plugin
 #nutups.host=
 #nutups.port=
+
+## NetScan plugin
 # Network scanning should probably be disabled in some networks (default on)
 #netscan.ipscan=false
+
