--- a/plugins/tellstick/build.xml
+++ b/plugins/tellstick/build.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="ZWave Plugin" >
+<project name="Tellstick Plugin" >
 
 	<!-- ________________________ PROPERTIES AND SETTINGS ________________________ -->
 
 	<!--common properties-->
 	<property name="root" value="." />
 	<property name="srcDir" value="${root}/src" />
+	<property name="testDir" value="${root}/test" />
 	<property name="libDir" value="${root}/lib" />
 
 	<property name="buildRoot" value="${root}/build" />
 	<property name="compileDir" value="${buildRoot}/production" />
+	<property name="compileTestDir" value="${buildRoot}/test" />
 	<property name="releaseDir" value="${buildRoot}/release" />
-	<property name="releaseJar" value="zwave.jar" />
-
+	<property name="releaseJar" value="tellstick.jar" />
+    <property name="reportsDir" value="../../${buildRoot}/reports" /> <!-- Use Hal reports folder -->
 
 	<!-- ________________________ CLASSPATH ________________________ -->
 
@@ -34,9 +36,28 @@
         </fileset>
 	</path>
 
-	<!-- ________________________ EXECUTION TARGETS ________________________ -->
+    <path id="classpath.test">
+        <pathelement location="${compileTestDir}" />
+        <pathelement location="../../${compileTestDir}" />
+        <!--include libraries used for building-->
+        <path refid="classpath.build"/>
+    </path>
 
-	<target name="test" />
+
+    <!-- ________________________ EXECUTION TARGETS ________________________ -->
+
+    <target name="test" depends="build-test">
+        <mkdir dir="${reportsDir}" />
+        <junit printsummary="yes" haltonfailure="false" fork="true">
+            <classpath refid="classpath.test" />
+            <formatter type="plain" usefile="false" /> <!-- to screen -->
+            <formatter type="xml" /> <!-- to file -->
+
+            <batchtest todir="${reportsDir}" skipNonTests="true">
+                <fileset dir="${compileTestDir}" includes="**/*Test*.class" />
+            </batchtest>
+        </junit>
+    </target>
 
 	<!-- ________________________ BUILD TARGETS ________________________ -->
 
@@ -58,6 +79,14 @@
 			<fileset dir="${srcDir}"
 					 excludes="**/*.java" />
 		</copy>
+	</target>
+
+	<target name="build-test" depends="build">
+		<mkdir dir="${compileTestDir}" />
+		<javac srcdir="${testDir}" destdir="${compileTestDir}" debug="yes" debugLevel="lines,vars,source" fork="yes">
+			<classpath refid="classpath.test" />
+			<include name="**/*.java" />
+		</javac>
 	</target>
 
 	<target name="package" depends="build">
