--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,8 @@
 		<java fork="true" failonerror="true" classname="se.hal.HalServer">
 			<classpath>
 				<pathelement path="${releaseDir}/${releaseJar}"/>
-				<pathelement path="${libDir}/*"/>	<!--wildcard may not be platform independent, ok?-->
+				<pathelement path="${releaseDir}/plugins/*"/>
+				<pathelement path="${libDir}/*"/>
 			</classpath>
 		</java>
 	</target>
