--- a/plugins/zwave/build.xml
+++ b/plugins/zwave/build.xml
@@ -1,67 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="ZWave Plugin" >
 
-	<!-- ________________________ PROPERTIES AND SETTINGS ________________________ -->
+    <!-- ________________________ PROPERTIES AND SETTINGS ________________________ -->
 
-	<!--common properties-->
-	<property name="root" value="." />
-	<property name="srcDir" value="${root}/src" />
-	<property name="libDir" value="${root}/lib" />
+    <!--common properties-->
+    <property name="root" value="." />
+    <property name="srcDir" value="${root}/src" />
+    <property name="testDir" value="${root}/test" />
+    <property name="libDir" value="${root}/lib" />
 
-	<property name="buildRoot" value="${root}/build" />
-	<property name="compileDir" value="${buildRoot}/production" />
-	<property name="releaseDir" value="${buildRoot}/release" />
-	<property name="releaseJar" value="zwave.jar" />
+    <property name="buildRoot" value="${root}/build" />
+    <property name="compileDir" value="${buildRoot}/production" />
+    <property name="compileTestDir" value="${buildRoot}/test" />
+    <property name="releaseDir" value="${buildRoot}/release" />
+    <property name="releaseJar" value="zwave.jar" />
+    <property name="reportsDir" value="../../${buildRoot}/reports" /> <!-- Use Hal reports folder -->
 
+    <!-- ________________________ TARGETS ________________________ -->
 
-	<!-- ________________________ CLASSPATH ________________________ -->
-
-	<!--define standard arguments for javac-->
-	<presetdef name="javac">
-		<javac includeantruntime="false" />
-	</presetdef>
-
-	<!--classpath included when building-->
-	<path id="classpath.build">
-        <fileset dir="${libDir}" erroronmissingdir="false">
-            <include name="**/*.jar"/>
-        </fileset>
-        <pathelement location="${compileDir}" />
-        <!-- Hal core -->
-        <pathelement location="../../build/production" />
-        <fileset dir="../../lib">
-            <include name="**/*.jar"/>
-        </fileset>
-	</path>
-
-	<!-- ________________________ EXECUTION TARGETS ________________________ -->
-
-	<target name="test" />
-
-	<!-- ________________________ BUILD TARGETS ________________________ -->
-
-	<!--clean all build paths-->
-	<target name="clean">
-		<delete includeemptydirs="true" failonerror="false">
-			<fileset dir="${buildRoot}" includes="**/*"/>
-		</delete>
-	</target>
-
-	<!--build product code-->
-	<target name="build">
-		<mkdir dir="${compileDir}" />
-		<javac srcdir="${srcDir}" destdir="${compileDir}" debug="yes" debugLevel="lines,vars,source" fork="yes">
-			<classpath refid="classpath.build" />
-			<include name="**/*.java" />
-		</javac>
-		<copy todir="${compileDir}">
-			<fileset dir="${srcDir}"
-					 excludes="**/*.java" />
-		</copy>
-	</target>
-
-	<target name="package" depends="build">
-		<jar destfile="${releaseDir}/${releaseJar}" basedir="${compileDir}" />
-	</target>
+    <import file="../../build_plugin.xml"/>
 
 </project>
