--- a/build.xml
+++ b/build.xml
@@ -113,7 +113,7 @@
 
     <target name="build-dependencies">
         <mkdir dir="${compileDir}" />
-        <get src="http://ci.koc.se/jenkins/job/Zutil/147/artifact/build/release/Zutil.jar"
+        <get src="http://ci.koc.se/jenkins/job/Zutil/180/artifact/se/koc/zutil/1.0.0-SNAPSHOT/zutil-1.0.0-SNAPSHOT.jar"
              dest="${libDir}" verbose="true" usetimestamp="true"/>
     </target>
 
